# url-shortener

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deployment.yaml  wrk.lua
.github/workflows/: deploy-url-shortener.yaml
src/: main.rs  routes.rs  state.rs  types.rs
src/handlers/: index_html.rs  mod.rs  not_found.rs  redirect.rs  shorten.rs
static/: 404.html  index.html  script.js  style.css
